Implemented better search performance (no need for separate count ajax call)
